[package]
name = "rs-level-editor"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { path = "../egui/crates/eframe" }
image = { version = "0.24.4", features = ["webp", "libwebp"] }
rfd = "0.10.0"

[profile.release-plus]
inherits = "release"
opt-level = 3
strip = true
lto = true
codegen-units = 1
