[package]
name = "rs-level-editor"
version = "1.0.0"
edition = "2021"
authors = ["Andrew Langmeier <raymi306@gmail.com>"]

[dependencies]
eframe = { git = "https://github.com/emilk/egui" }
image = { version = "0.24.4", features = ["webp", "libwebp"] }
rfd = "0.10.0"

[profile.release-plus]
inherits = "release"
opt-level = 3
strip = true
lto = true
codegen-units = 1
